--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "release",
   "version": "0.1.0",
   "description": "Create GitHub Releases from the command line",
-  "main": "index.js",
   "scripts": {
     "test": "xo"
   },
@@ -16,6 +15,9 @@
   ],
   "author": "leo",
   "license": "MIT",
+  "bin": {
+    "release": "./index.js"
+  },
   "bugs": {
     "url": "https://github.com/zeit/release/issues"
   },
