--- a/package.json
+++ b/package.json
@@ -21,10 +21,7 @@
   "xo": {
     "esnext": true,
     "space": true,
-    "semicolon": false,
-    "rules": {
-      "unicorn/no-process-exit": 0
-    }
+    "semicolon": false
   },
   "bugs": {
     "url": "https://github.com/zeit/release/issues"
@@ -35,6 +32,7 @@
   },
   "dependencies": {
     "args": "^2.2.1",
-    "chalk": "^1.1.3"
+    "chalk": "^1.1.3",
+    "ora": "^0.4.0"
   }
 }
