--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "args": "^2.2.1",
     "chalk": "^1.1.3",
     "condense-whitespace": "^1.0.0",
+    "git-commits": "^1.2.0",
     "github": "^7.1.0",
     "ora": "^0.4.0"
   }
