--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "github": "^7.1.0",
     "inquirer": "^2.0.0",
     "ora": "^0.4.0",
+    "pluralize": "^3.1.0",
     "semver": "^5.3.0"
   }
 }
