--- a/package.json
+++ b/package.json
@@ -36,12 +36,12 @@
   "dependencies": {
     "args": "^2.2.1",
     "chalk": "^1.1.3",
-    "condense-whitespace": "^1.0.0",
     "git-commits": "^1.2.0",
     "github": "^7.1.0",
     "inquirer": "^2.0.0",
     "ora": "^0.4.0",
     "pluralize": "^3.1.0",
-    "semver": "^5.3.0"
+    "semver": "^5.3.0",
+    "trim": "0.0.1"
   }
 }
