--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "args": "^2.2.1",
+    "capitalize": "^1.0.0",
     "chalk": "^1.1.3",
     "git-commits": "^1.2.0",
     "github": "^7.1.0",
