--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "chalk": "^1.1.3",
     "git-commits": "^1.2.0",
     "github": "^7.1.0",
+    "github-url-to-object": "^2.2.6",
     "inquirer": "^2.0.0",
+    "is-url": "^1.2.2",
     "ora": "^0.4.0",
     "pluralize": "^3.1.0",
     "semver": "^5.3.0",
