Tell npm which files to upload

--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "scripts": {
     "test": "xo"
   },
+  "files": [
+    "lib",
+    "index.js"
+  ],
   "repository": "zeit/release",
   "keywords": [
     "github",
