--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "github-url-to-object": "^2.2.6",
     "inquirer": "^2.0.0",
     "is-url": "^1.2.2",
+    "open": "0.0.5",
     "ora": "^0.4.0",
     "pluralize": "^3.1.0",
     "semver": "^5.3.0",
