Better file structure

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "author": "leo",
   "license": "MIT",
   "bin": {
-    "release": "./index.js"
+    "release": "./bin/release.js"
   },
   "xo": {
     "esnext": true,
