--- a/package.json
+++ b/package.json
@@ -51,6 +51,10 @@
     "open": "0.0.5",
     "ora": "^0.4.0",
     "pluralize": "^3.1.0",
+    "query-string": "^4.2.3",
+    "random-string": "^0.1.2",
+    "request": "^2.79.0",
+    "request-promise-native": "^1.0.3",
     "semver": "^5.3.0",
     "trim": "0.0.1"
   }
