--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "args": "^2.2.1",
+    "async-retry": "^0.2.1",
     "capitalize": "^1.0.0",
     "chalk": "^1.1.3",
     "git-commits": "^1.2.0",
