--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "async-retry": "^0.2.1",
     "capitalize": "^1.0.0",
     "chalk": "^1.1.3",
+    "configstore": "^2.1.0",
     "git-commits": "^1.2.0",
     "github": "^7.1.0",
     "github-url-to-object": "^2.2.6",
