--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "chalk": "^1.1.3",
     "configstore": "^2.1.0",
     "git-commits": "^1.2.0",
+    "git-state": "^3.1.0",
     "github": "^7.1.0",
     "github-url-to-object": "^2.2.6",
     "inquirer": "^2.0.0",
