--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "release",
   "version": "1.0.0",
-  "description": "Create GitHub Releases from the command line",
+  "description": "Manage GitHub Releases from the command line",
   "scripts": {
     "test": "xo"
   },
