--- a/package.json
+++ b/package.json
@@ -49,11 +49,11 @@
     "chalk": "^1.1.3",
     "configstore": "^2.1.0",
     "git-commits": "^1.2.0",
+    "git-repo-name": "^0.6.0",
     "git-state": "^3.1.0",
+    "git-username": "^0.4.0",
     "github": "^7.1.0",
-    "github-url-to-object": "^2.2.6",
     "inquirer": "^2.0.0",
-    "is-url": "^1.2.2",
     "open": "0.0.5",
     "ora": "^0.4.0",
     "pluralize": "^3.1.0",
