--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Manage GitHub Releases from the command line",
   "scripts": {
     "test": "xo",
-    "preinstall": "lib/preinstall.js"
+    "preinstall": "bin/preinstall.js"
   },
   "files": [
     "bin",
