--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "ava": "^0.17.0",
     "nyc": "^10.0.0",
+    "sinon": "^1.17.7",
     "xo": "^0.17.1"
   },
   "dependencies": {
@@ -53,6 +54,7 @@
     "async-retry": "^0.2.1",
     "capitalize": "^1.0.0",
     "chalk": "^1.1.3",
+    "child-process-promise": "^2.2.0",
     "configstore": "^2.1.0",
     "git-commits": "^1.2.0",
     "git-repo-name": "^0.6.0",
