--- a/package.json
+++ b/package.json
@@ -3,7 +3,15 @@
   "version": "1.1.3",
   "description": "Manage GitHub Releases from the command line",
   "scripts": {
-    "test": "xo"
+    "coverage": "nyc --reporter=lcov --reporter=text ava",
+    "lint": "xo",
+    "test": "ava && xo",
+    "test:unit": "ava"
+  },
+  "ava": {
+    "require": [
+      "async-to-gen/register"
+    ]
   },
   "files": [
     "bin",
@@ -42,6 +50,8 @@
   },
   "homepage": "https://github.com/zeit/release#readme",
   "devDependencies": {
+    "ava": "^0.17.0",
+    "nyc": "^10.0.0",
     "xo": "^0.17.1"
   },
   "dependencies": {
