--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.1.2",
   "description": "Manage GitHub Releases from the command line",
   "scripts": {
-    "test": "xo",
+    "coverage": "nyc --reporter=lcov --reporter=text node --harmony-async-await node_modules/.bin/ava",
+    "lint": "xo",
+    "test": "npm run test:unit && xo",
+    "test:unit": "node --harmony-async-await node_modules/.bin/ava",
     "preinstall": "./bin/preinstall.js"
   },
   "files": [
@@ -41,6 +44,8 @@
   },
   "homepage": "https://github.com/zeit/release#readme",
   "devDependencies": {
+    "ava": "^0.17.0",
+    "nyc": "^10.0.0",
     "xo": "^0.17.1"
   },
   "dependencies": {
