--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "semicolon": false,
     "rules": {
       "import/no-dynamic-require": 0,
+      "import/no-unresolved": 0,
+      "import/no-unassigned-import": 0,
       "unicorn/no-process-exit": 0,
       "camelcase": 0
     }
@@ -46,6 +48,7 @@
   "dependencies": {
     "args": "^2.2.3",
     "async-retry": "^0.2.1",
+    "async-to-gen": "^1.3.0",
     "capitalize": "^1.0.0",
     "chalk": "^1.1.3",
     "configstore": "^2.1.0",
