--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "1.1.2",
   "description": "Manage GitHub Releases from the command line",
   "scripts": {
-    "test": "xo",
-    "preinstall": "./bin/preinstall.js"
+    "test": "xo"
   },
   "files": [
     "bin",
