--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "git-username": "^0.5.0",
     "github": "^8.0.0",
     "inquirer": "^2.0.0",
+    "node-version": "^1.0.0",
     "open": "0.0.5",
     "ora": "^0.4.1",
     "pluralize": "^3.1.0",
