feat: set default task

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "bin": {
     "release": "./bin/release.js"
   },
+  "main": "lib/index.js",
   "xo": {
     "esnext": true,
     "space": true,
