--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "node-version": "^1.0.0",
     "open": "0.0.5",
     "ora": "^1.0.0",
+    "pify": "^2.3.0",
     "pluralize": "^3.1.0",
     "random-string": "^0.1.2",
     "request": "^2.79.0",
