--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "capitalize": "^1.0.0",
     "chalk": "^1.1.3",
     "configstore": "^2.1.0",
+    "get-stream": "^3.0.0",
     "git-commits": "^1.2.0",
     "git-repo-name": "^0.6.0",
     "git-state": "^3.1.0",
@@ -81,6 +82,7 @@
     "semver": "^5.3.0",
     "tagged-versions": "^1.3.0",
     "then-sleep": "^1.0.1",
+    "through2": "^2.0.3",
     "trim": "0.0.1",
     "update-notifier": "^1.0.3"
   }
