--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "git-state": "^3.1.0",
     "git-username": "^0.5.0",
     "github": "^8.0.0",
+    "handlebars": "^4.0.6",
     "inquirer": "^3.0.0",
     "lodash.camelcase": "^4.3.0",
     "node-version": "^1.0.0",
