--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "capitalize": "^1.0.0",
     "chalk": "^1.1.3",
     "configstore": "^2.1.0",
+    "debug": "^2.6.0",
     "get-stream": "^3.0.0",
     "git-commits": "^1.2.0",
     "git-repo-name": "^0.6.0",
