--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
   "devDependencies": {
     "ava": "^0.17.0",
     "nyc": "^10.0.0",
+    "proxyquire": "^1.7.10",
     "sinon": "^1.17.7",
+    "stream-array": "^1.1.2",
     "xo": "^0.17.1"
   },
   "dependencies": {
