--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "async-to-gen": "^1.3.0",
     "capitalize": "^1.0.0",
     "chalk": "^1.1.3",
+    "child-process-promise": "^2.2.0",
     "configstore": "^2.1.0",
     "debug": "^2.6.0",
     "get-stream": "^3.0.0",
