--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.1.6",
   "description": "Manage GitHub Releases from the command line",
   "scripts": {
-    "test": "xo"
+    "test": "xo",
+    "precommit": "npm run test"
   },
   "files": [
     "bin",
@@ -42,6 +43,7 @@
   },
   "homepage": "https://github.com/zeit/release#readme",
   "devDependencies": {
+    "husky": "0.13.1",
     "xo": "0.17.1"
   },
   "dependencies": {
