--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.1.7",
   "description": "Manage GitHub Releases from the command line",
   "scripts": {
-    "test": "xo",
-    "precommit": "npm run test"
+    "precommit": "lint-staged",
+    "test": "xo"
   },
   "files": [
     "bin",
@@ -28,6 +28,13 @@
       "prettier"
     ]
   },
+  "lint-staged": {
+    "*.js": [
+      "npm test",
+      "prettier --single-quote --write",
+      "git add"
+    ]
+  },
   "engines": {
     "node": ">= 6.9.0"
   },
@@ -38,6 +45,7 @@
   "devDependencies": {
     "eslint-config-prettier": "1.5.0",
     "husky": "0.13.1",
+    "lint-staged": "3.4.0",
     "xo": "0.17.1"
   },
   "dependencies": {
