--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-config-prettier": "1.5.0",
     "husky": "0.13.1",
     "lint-staged": "3.4.0",
+    "prettier": "0.22.0",
     "xo": "0.17.1"
   },
   "dependencies": {
