--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "lint-staged": {
     "*.js": [
       "npm test",
-      "prettier --single-quote --write",
+      "prettier --single-quote --no-semi --write",
       "git add"
     ]
   },
@@ -46,7 +46,7 @@
     "eslint-config-prettier": "1.6.0",
     "husky": "0.13.3",
     "lint-staged": "3.4.0",
-    "prettier": "0.22.0",
+    "prettier": "1.0.2",
     "xo": "0.18.1"
   },
   "dependencies": {
