--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "capitalize": "1.0.0",
     "chalk": "2.0.1",
     "configstore": "3.1.1",
+    "fs-extra": "4.0.1",
     "git-commits": "1.3.0",
     "git-repo-name": "0.6.0",
     "git-state": "4.0.0",
