--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
   "xo": {
     "extends": [
       "prettier"
-    ]
+    ],
+    "rules": {
+      "no-await-in-loop": 0
+    }
   },
   "lint-staged": {
     "*.js": [
@@ -52,7 +55,6 @@
   "dependencies": {
     "args": "3.0.4",
     "async-retry": "1.1.3",
-    "bluebird": "3.5.0",
     "capitalize": "1.0.0",
     "chalk": "2.1.0",
     "configstore": "3.1.1",
