--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "git-state": "4.0.0",
     "git-username": "0.5.0",
     "github": "9.2.0",
+    "github-username": "4.1.0",
     "inquirer": "3.2.2",
     "node-version": "1.1.0",
     "open": "0.0.5",
