--- a/package.json
+++ b/package.json
@@ -59,8 +59,8 @@
     "chalk": "2.3.0",
     "configstore": "3.1.1",
     "fs-extra": "4.0.2",
-    "git-commits": "1.3.0",
     "git-repo-name": "0.6.0",
+    "git-spawned-stream": "1.0.0",
     "git-state": "4.0.0",
     "git-username": "0.5.0",
     "github": "12.0.1",
