--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "xo": "0.18.2"
   },
   "dependencies": {
+    "@zeit/check-updates": "1.0.5",
     "args": "3.0.8",
     "async-retry": "1.1.4",
     "capitalize": "1.0.0",
@@ -75,7 +76,6 @@
     "request-promise-native": "1.0.5",
     "semver": "5.4.1",
     "tagged-versions": "1.3.0",
-    "then-sleep": "1.0.1",
-    "update-notifier": "2.3.0"
+    "then-sleep": "1.0.1"
   }
 }
