--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "release",
   "version": "3.1.3",
-  "description": "Create GitHub Releases from the command line",
+  "description": "Generate changelogs with a single command",
   "scripts": {
     "precommit": "lint-staged",
     "test": "xo"
