--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "capitalize": "1.0.0",
     "chalk": "2.3.0",
     "configstore": "3.1.1",
+    "escape-goat": "1.3.0",
     "fs-extra": "5.0.0",
     "git-repo-name": "0.6.0",
     "git-spawned-stream": "1.0.0",
