--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
   },
   "dependencies": {
     "@octokit/rest": "14.0.9",
-    "@zeit/check-updates": "1.1.0",
     "args": "3.0.8",
     "async-retry": "1.1.4",
     "capitalize": "1.0.0",
@@ -70,6 +69,7 @@
     "request-promise-native": "1.0.5",
     "semver": "5.5.0",
     "tagged-versions": "1.3.0",
-    "then-sleep": "1.0.1"
+    "then-sleep": "1.0.1",
+    "update-check": "1.3.2"
   }
 }
