--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "3.1.7",
   "description": "Generate changelogs with a single command",
   "scripts": {
-    "precommit": "lint-staged",
-    "test": "xo"
+    "test": "yarn lint",
+    "lint": "zeit-eslint --ext .jsx,.js .",
+    "lint-staged": "git diff --diff-filter=ACMRT --cached --name-only '*.js' '*.jsx' | xargs zeit-eslint"
   },
   "files": [
     "bin",
@@ -23,53 +24,44 @@
   "bin": {
     "release": "./bin/release.js"
   },
-  "xo": {
-    "extends": [
-      "prettier"
-    ],
-    "rules": {
-      "no-await-in-loop": 0
-    }
-  },
-  "lint-staged": {
-    "*.js": [
-      "npm test",
-      "prettier --single-quote --no-semi --write",
-      "git add"
-    ]
-  },
   "devDependencies": {
-    "eslint-config-prettier": "2.9.0",
-    "husky": "0.14.3",
-    "lint-staged": "6.1.0",
-    "prettier": "1.10.2",
-    "xo": "0.18.2"
+    "@zeit/eslint-config-node": "0.2.13",
+    "@zeit/git-hooks": "0.1.4",
+    "eslint": "4.19.1"
   },
   "dependencies": {
-    "@octokit/rest": "14.0.9",
-    "args": "3.0.8",
-    "async-retry": "1.1.4",
+    "@octokit/rest": "15.2.6",
+    "args": "4.0.0",
+    "async-retry": "1.2.1",
     "capitalize": "1.0.0",
-    "chalk": "2.3.1",
-    "configstore": "3.1.1",
+    "chalk": "2.4.0",
+    "configstore": "3.1.2",
     "escape-goat": "1.3.0",
     "fs-extra": "5.0.0",
     "git-repo-name": "0.6.0",
     "git-spawned-stream": "1.0.0",
     "git-state": "4.0.0",
-    "git-username": "0.5.0",
+    "git-username": "1.0.0",
     "github-username": "4.1.0",
-    "inquirer": "5.1.0",
-    "node-version": "1.1.0",
+    "inquirer": "5.2.0",
+    "node-version": "1.1.3",
     "open": "0.0.5",
-    "ora": "1.4.0",
+    "ora": "2.0.0",
     "pluralize": "7.0.0",
     "random-string": "0.2.0",
-    "request": "2.83.0",
+    "request": "2.85.0",
     "request-promise-native": "1.0.5",
     "semver": "5.5.0",
     "tagged-versions": "1.3.0",
     "then-sleep": "1.0.1",
     "update-check": "1.3.2"
+  },
+  "eslintConfig": {
+    "extends": [
+      "@zeit/eslint-config-node"
+    ]
+  },
+  "git": {
+    "pre-commit": "lint-staged"
   }
 }
