--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "github-username": "4.1.0",
     "inquirer": "5.2.0",
     "node-version": "1.1.3",
-    "open": "0.0.5",
+    "opn": "5.4.0",
     "ora": "2.0.0",
     "random-string": "0.2.0",
     "request": "2.85.0",
