--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "semver": "5.5.0",
     "tagged-versions": "1.3.0",
     "then-sleep": "1.0.1",
-    "update-check": "1.3.2"
+    "update-check": "1.3.2",
+    "child-process-promise": "^2.1.3"
   },
   "eslintConfig": {
     "extends": [
