--- a/package.json
+++ b/package.json
@@ -44,12 +44,11 @@
     "git-username": "1.0.0",
     "github-username": "4.1.0",
     "inquirer": "5.2.0",
+    "node-fetch": "2.6.0",
     "node-version": "1.1.3",
     "opn": "5.4.0",
     "ora": "2.0.0",
     "random-string": "0.2.0",
-    "request": "2.85.0",
-    "request-promise-native": "1.0.5",
     "semver": "5.5.0",
     "tagged-versions": "1.3.0",
     "then-sleep": "1.0.1",
