--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "capitalize": "1.0.0",
     "chalk": "2.4.0",
     "configstore": "3.1.2",
+    "delay": "4.3.0",
     "escape-goat": "1.3.0",
     "fs-extra": "5.0.0",
     "git-repo-name": "0.6.0",
