--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "git-username": "1.0.0",
     "github-username": "4.1.0",
     "inquirer": "5.2.0",
+    "lodash.defaultsdeep": "4.6.1",
     "node-fetch": "2.6.0",
     "node-version": "1.1.3",
     "opn": "5.4.0",
